--- a/src/main/webapp/frontend/styles/components/app-bar.html
+++ b/src/main/webapp/frontend/styles/components/app-bar.html
@@ -42,9 +42,9 @@
     .app-bar__avatar {
       border-radius: 100%;
       flex-shrink: 0;
-      height: var(--lumo-size-s);
+      height: var(--lumo-size-l);
       margin-left: var(--lumo-space-m);
-      width: var(--lumo-size-s);
+      width: var(--lumo-size-l);
     }
 
     /* Tabs */
