adding google map link

--- a/src/main/webapp/frontend/styles/components/app-bar.html
+++ b/src/main/webapp/frontend/styles/components/app-bar.html
@@ -16,16 +16,21 @@
     /* Navi icon */
     .app-bar__navi-icon,
     .app-bar__context-icon {
-      margin-right: var(--lumo-space-l);
+      margin-right: var(--lumo-space-s);
     }
 
     /* Title */
     .app-bar__title {
-      flex-grow: 1;
       margin: 0;
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+    }
+    
+    /* Action items */
+    .app-bar__action-items {
+      flex-grow: 1;
+      margin-left: var(--lumo-space-s);
     }
 
     /* Action items */
